welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value newArray
  var Couleurs=newArray[Color] (8)
               ^Array1:6: error: object java.awt.Color is not a value
  while (getCouleurSol()!=Color(0)) {
                          ^